# docs/swagger.json
@@ -12,7 +12,7 @@
     },
     "basePath": "/",
     "paths": {
-        "/asyncapi/docs": {
+        "/docs/asyncapi": {
             "get": {
                 "description": "Get all asyncapi docs.",
                 "produces": [
@@ -49,7 +49,96 @@
                 }
             }
         },
-        "/asyncapi/storage": {
+        "/docs/swagger": {
+            "get": {
+                "description": "Get all swagger docs.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Swagger"
+                ],
+                "summary": "Get docs",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "jwt token",
+                        "name": "Authorization",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
+                        "description": "user roles",
+                        "name": "X-User-Roles",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "list of swagger docs",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "object"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "error message",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/info": {
+            "get": {
+                "description": "Get basic service and runtime information.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Info"
+                ],
+                "summary": "Get service info",
+                "responses": {
+                    "200": {
+                        "description": "info",
+                        "schema": {
+                            "$ref": "#/definitions/lib.SrvInfo"
+                        }
+                    },
+                    "500": {
+                        "description": "error message",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/storage-refresh/swagger": {
+            "patch": {
+                "description": "Trigger swagger docs refresh.",
+                "tags": [
+                    "Swagger"
+                ],
+                "summary": "Refresh storage",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "500": {
+                        "description": "error message",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/storage/asyncapi": {
             "get": {
                 "description": "Get meta information of all stored items.",
                 "consumes": [
@@ -86,7 +175,7 @@
                 }
             }
         },
-        "/asyncapi/storage/{id}": {
+        "/storage/asyncapi/{id}": {
             "put": {
                 "description": "Store an asyncapi doc.",
                 "consumes": [
@@ -184,119 +273,7 @@
                 }
             }
         },
-        "/info": {
-            "get": {
-                "description": "Get basic service and runtime information.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Info"
-                ],
-                "summary": "Get service info",
-                "responses": {
-                    "200": {
-                        "description": "info",
-                        "schema": {
-                            "$ref": "#/definitions/lib.SrvInfo"
-                        }
-                    },
-                    "500": {
-                        "description": "error message",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/swagger": {
-            "get": {
-                "description": "Get all swagger docs.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Swagger"
-                ],
-                "summary": "Get docs (deprecated)",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "jwt token",
-                        "name": "Authorization",
-                        "in": "header"
-                    },
-                    {
-                        "type": "string",
-                        "description": "user roles",
-                        "name": "X-User-Roles",
-                        "in": "header"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "list of swagger docs",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "object"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "error message",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/swagger/docs": {
-            "get": {
-                "description": "Get all swagger docs.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Swagger"
-                ],
-                "summary": "Get docs",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "jwt token",
-                        "name": "Authorization",
-                        "in": "header"
-                    },
-                    {
-                        "type": "string",
-                        "description": "user roles",
-                        "name": "X-User-Roles",
-                        "in": "header"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "list of swagger docs",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "object"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "error message",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/swagger/storage": {
+        "/storage/swagger": {
             "get": {
                 "description": "Get meta information of all stored items.",
                 "produces": [
@@ -315,26 +292,6 @@
                                 "$ref": "#/definitions/models.SwaggerItem"
                             }
                         }
-                    },
-                    "500": {
-                        "description": "error message",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/swagger/storage-refresh": {
-            "patch": {
-                "description": "Trigger swagger docs refresh.",
-                "tags": [
-                    "Swagger"
-                ],
-                "summary": "Refresh storage",
-                "responses": {
-                    "200": {
-                        "description": "OK"
                     },
                     "500": {
                         "description": "error message",
@@ -418,16 +375,40 @@
         "time.Duration": {
             "type": "integer",
             "enum": [
+                -9223372036854775808,
+                9223372036854775807,
                 1,
                 1000,
                 1000000,
-                1000000000
+                1000000000,
+                60000000000,
+                3600000000000,
+                -9223372036854775808,
+                9223372036854775807,
+                1,
+                1000,
+                1000000,
+                1000000000,
+                60000000000,
+                3600000000000
             ],
             "x-enum-varnames": [
+                "minDuration",
+                "maxDuration",
                 "Nanosecond",
                 "Microsecond",
                 "Millisecond",
-                "Second"
+                "Second",
+                "Minute",
+                "Hour",
+                "minDuration",
+                "maxDuration",
+                "Nanosecond",
+                "Microsecond",
+                "Millisecond",
+                "Second",
+                "Minute",
+                "Hour"
             ]
         }
     }
